--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sample",
+  "name": "funhihello",
   "version": "1.0.0",
   "description": "my sample node app",
-  "main": "sample.js",
+  "main": "helloapp.js",
   "scripts": {
-  "start": "node sample.js"
+  "start": "node helloapp.js"
 },
   "repository": {
   "type": "git",
