--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "funhihello",
+  "name": "helloApp",
   "version": "1.0.0",
   "description": "my sample node app",
   "main": "helloapp.js",
