--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cristy8344/helloApp",
   "version": "1.0.0",
   "description": "my sample node app",
-  "main": "helloapp.js",
+  "main": "index.js",
   "scripts": {
-  "start": "node helloapp.js"
+  "start": "node index.js"
 },
   "repository": {
   "type": "git",
